--- a/assets/css/psystyle.css
+++ b/assets/css/psystyle.css
@@ -1,5 +1,5 @@
 body {
-	background-image: <img src="assets/images/Solar-U4-Belt-of-Dust.jpg">;
+	background-image: url("../images/Solar-U4-Belt-of-Dust.jpg");
 	-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
